--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 		<style>
 			body { margin: 0; }
 		</style>
+		<link type="text/css" rel="stylesheet" href="./css/main.css">
 	</head>
 	<body>
+		<div id="info">
+			"W" translate | "E" rotate | "R" scale<br />
+			"X" toggle X | "Y" toggle Y | "Z" toggle Z | "Spacebar" toggle enabled<br />
+		</div>
 		<script src="./js/three.js"></script>
 		<script type="text/javascript" src="./js/dat.gui.min.js"></script>
+		<script src="./js/TransformControls.js"></script>
 		<script src="./js/OrbitControls.js"></script>
 		<script src="./js/object.js"></script>
-		<script type="module" src="./js/donut.js"></script>
+		<script type="module" src="./js/main.js"></script>
 		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 	</body>
 </html>
